Changed main design

--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
     <title>Jadnell Reyes' Portfolio</title>
   </head>
 
+  <video
+    class="background"
+    src="/Images/Videos/test3.mp4"
+    autoplay
+    loop
+    muted
+  ></video>
+
   <body>
-    <header></header>
-    <div class="background"></div>
     <!-- Menu Button -->
     <div class="navBar">
       <div class="menu">
@@ -132,6 +138,7 @@
         />
       </button>
     </div>
+
     <!-- ABOUT ME PAGE -->
     <section id="aboutMePage" class="animatedSection leftSlide">
       <!-- Image and Info Cards Containers -->
@@ -141,7 +148,7 @@
             <a
               ><img
                 class="mainPictures"
-                src="Images/Pictures/TRENZAS ME.jpg"
+                src="Images/Pictures/PROF ME.jpg"
                 title="Hello! This is me"
                 width="225px"
                 height="225px"
@@ -159,10 +166,11 @@
         </div>
 
         <br />
+        <br />
 
         <div class="row">
           <div class="col">
-            <div class="infoCard mainCard">
+            <div class="infoCard">
               <h6 class="cardTitles">Who am I?</h6>
               <p>
                 I'm a 22-year-old Computer Engineering graduate from the
@@ -176,7 +184,7 @@
           </div>
 
           <div class="col">
-            <div class="infoCard mainCard">
+            <div class="infoCard">
               <h6 class="cardTitles">What can you find here?</h6>
               <p>
                 Below you can find the technologies, software and hardware I
@@ -190,7 +198,7 @@
           </div>
 
           <div class="col">
-            <div class="infoCard mainCard">
+            <div class="infoCard">
               <h6 class="cardTitles">
                 Achievements, Degrees, Licenses & Certifications:
               </h6>
@@ -217,7 +225,7 @@
       </div>
 
       <div class="container">
-        <div class="projectCard">
+        <div class="techStackCard">
           <div class="container text-center">
             <div class="row">
               <div class="col">
@@ -1747,7 +1755,7 @@
           <div class="row">
             <div class="col">
               <div class="container">
-                <div class="infoCard">
+                <div class="contactCard">
                   <h3 class="cardTitles">Social Media:</h3>
                   <div class="row">
                     <div class="col">
@@ -1875,7 +1883,7 @@
             </div>
             <div class="col">
               <div class="container">
-                <div class="infoCard">
+                <div class="contactCard">
                   <h3 class="cardTitles">Contact Me:</h3>
 
                   <!-- Contact Form: -->
