--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <a
               ><img
                 class="mainPictures"
-                src="Images/Pictures/PROF ME.jpg"
+                src="Images/Pictures/ME.png"
                 title="Hello! This is me"
                 width="225px"
                 height="225px"
