Minor design changes

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </div>
         </div>
 
-        <br />
+        <br class="desktopSpace" />
         <br />
 
         <div class="row">
