--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section id="aboutMePage" class="animatedSection leftSlide">
       <!-- Image and Info Cards Containers -->
       <div class="container text-center">
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col">
             <a
               ><img
