Added animation to greeting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@700&display=swap"
       rel="stylesheet"
     />
 
@@ -158,9 +158,24 @@
           <!--Text Greeting-->
           <div class="col">
             <div class="container greet">
-              <h3 class="greeting">Hello World!</h3>
-              <h2 class="greeting">I&apos;m Jadnell H. Reyes Pérez</h2>
-              <h4 class="greeting">and this is my Portfolio.</h4>
+              <h3 class="greeting">
+                <span>Hello </span>
+                <span>World!</span>
+              </h3>
+              <h2 class="greeting">
+                <span>I&apos;m </span>
+                <span>Jadnell </span>
+                <span>H. </span>
+                <span>Reyes </span>
+                <span>Pérez</span>
+              </h2>
+              <h4 class="greeting">
+                <span>&amp;</span>
+                <span>this</span>
+                <span>is</span>
+                <span>my</span>
+                <span>Portfolio.</span>
+              </h4>
             </div>
           </div>
         </div>
