Added effect when pressing menuButton

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div id="selectMenu">
           <button class="menuButtons" type="button">
             <img
+              id="menuButton"
               src="Images/Icons/gridFour.svg"
               title="Menu"
               width="35px"
