Added frameworks section

--- a/index.html
+++ b/index.html
@@ -246,7 +246,9 @@
             <div class="row">
               <div class="col">
                 <div class="container">
-                  <h3 class="cardTitles">Programming Languages:</h3>
+                  <h3 id="progLangTitle" class="cardTitles">
+                    Programming Languages:
+                  </h3>
                 </div>
                 <!-- Tech Stack New Container -->
                 <div id="HTMLContainer" class="progLangCube">
@@ -292,13 +294,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://html.com/';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -355,13 +356,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://www.w3.org/Style/CSS/Overview.en.html';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -419,13 +419,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -487,13 +486,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://docs.python.org/3/faq/general.html#what-is-python';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -551,13 +549,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://www.w3schools.com/cpp/cpp_intro.asp';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -617,13 +614,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://dart.dev/overview';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -681,13 +677,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://aws.amazon.com/what-is/sql/';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -750,13 +745,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://www.mathworks.com/products/matlab.html';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -821,13 +815,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://code.visualstudio.com/docs/supporting/faq';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -890,13 +883,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://developer.android.com/studio/intro';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -953,13 +945,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://visualstudio.microsoft.com/#vs-section';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -1021,13 +1012,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://www.virtualbox.org/wiki/VirtualBox';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -1087,13 +1077,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://www.raspberrypi.com/for-home/';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -1155,13 +1144,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://www.arduino.cc/en/Guide/Introduction';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -1223,13 +1211,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://docs.github.com/en/get-started/quickstart/hello-world';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -1289,13 +1276,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://jupyter-notebook.readthedocs.io/en/stable/';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -1312,6 +1298,11 @@
                       >
                     </div>
                   </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="container">
+                  <h3 id="frameworkTitle" class="cardTitles">Frameworks:</h3>
                 </div>
 
                 <!-- Tech Stack New Container -->
@@ -1358,13 +1349,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://flutter.dev/';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -1424,13 +1414,12 @@
                           id="readMoreButton"
                           onclick="window.location.href='https://www.djangoproject.com/';"
                         >
-                          <b id="readMoreText">Read More</b>
+                          <b class="readMoreText">Read More</b>
                           <img
-                            id="readMoreImg"
                             src="Images/Icons/readMore.svg"
                             title="Read More"
-                            width="18em"
-                            height="18em"
+                            width="16em"
+                            height="16em"
                             alt="Magnifier"
                           />
                         </button>
@@ -1474,6 +1463,32 @@
 
                 <br />
 
+                <h3 class="cardTitles">Description:</h3>
+                <p class="projectDescription">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Officia ipsum porro odio cupiditate modi impedit, eligendi et,
+                  sint non nostrum, voluptatibus magnam illo. Unde quod voluptas
+                  recusandae odio maiores magnam quam dolore ex asperiores atque
+                  autem dicta iste consequatur doloremque quia laborum
+                  excepturi, harum eum. Maxime doloribus odit minus! Laborum
+                  similique facilis fugiat sunt explicabo perspiciatis hic
+                  quisquam quis. Rerum et aspernatur distinctio totam,
+                  exercitationem praesentium soluta culpa commodi eum vitae
+                  libero nam cupiditate? Accusamus tempore repellat ipsum
+                  voluptatum rerum adipisci aut quos asperiores illum
+                  consequatur. Repudiandae velit enim ducimus perspiciatis nemo
+                  esse reprehenderit consequuntur, aut dolorem cupiditate eaque
+                  veritatis.
+                </p>
+                <br />
+
+                <h3 class="cardTitles">Status:</h3>
+                <div class="status">Completed</div>
+
+                <br />
+              </div>
+
+              <div class="col">
                 <h3 class="cardTitles">Type of Project:</h3>
                 <div class="row">
                   <div id="personal" class="col projectType">Personal</div>
@@ -1487,22 +1502,6 @@
 
                 <br />
 
-                <h3 class="cardTitles">Description:</h3>
-                <p class="projectDescription">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-                  earum illum pariatur dolorem dignissimos eligendi consectetur
-                  deleniti officia laboriosam quasi cupiditate dolores iusto
-                  unde mollitia numquam eius aspernatur, quis et.
-                </p>
-                <br />
-
-                <h3 class="cardTitles">Status:</h3>
-                <div class="status">Completed</div>
-
-                <br />
-              </div>
-
-              <div class="col">
                 <h3 class="cardTitles">Tech Stack Implemented:</h3>
                 <button class="projectButton" type="button">
                   <img
