Added space between definitions and readMoreButton

--- a/index.html
+++ b/index.html
@@ -284,22 +284,34 @@
                   <hr id="techDescDivider" />
                   <div class="row">
                     <div class="col-4">
-                      <b class="description">Description:</b>
-                      <div class="container">
-                        <div class="space25px"></div>
-                        <button
-                          id="readMoreButton"
-                          onclick="window.location.href='https://www.w3.org/Style/CSS/Overview.en.html';"
-                        >
-                          <b class="readMoreText">Read More</b>
-                          <img
-                            src="Images/Icons/readMore.svg"
-                            title="Read More"
-                            width="16em"
-                            height="16em"
-                            alt="Magnifier"
-                          />
-                        </button>
+                      <div class="row">
+                        <div class="col">
+                          <b class="description">Description:</b>
+                        </div>
+                      </div>
+
+                      <div class="row">
+                        <div id="CSSSpacing" class="col"></div>
+                      </div>
+
+                      <div class="row">
+                        <div class="col readMoreBottom">
+                          <div class="container">
+                            <button
+                              id="readMoreButton"
+                              onclick="window.location.href='https://www.w3.org/Style/CSS/Overview.en.html';"
+                            >
+                              <b class="readMoreText">Read More</b>
+                              <img
+                                src="Images/Icons/readMore.svg"
+                                title="Read More"
+                                width="16em"
+                                height="16em"
+                                alt="Magnifier"
+                              />
+                            </button>
+                          </div>
+                        </div>
                       </div>
                     </div>
 
@@ -347,6 +359,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="CPPSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -412,6 +427,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="DartSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -479,6 +497,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="HTMLSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -542,6 +563,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="JavascriptSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -609,6 +633,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="MATLABSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -674,6 +701,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="PythonSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -737,6 +767,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="SQLSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -814,6 +847,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="AndroidStudioSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -880,6 +916,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="ArduinoSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -947,6 +986,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="GitHubSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -1014,6 +1056,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="JupyterSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -1082,6 +1127,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="RaspberryPiSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -1149,6 +1197,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="VirtualBoxSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -1210,6 +1261,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="VSSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -1279,6 +1333,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="VSCODESpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -1353,6 +1410,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="BootstrapSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -1418,6 +1478,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="DjangoSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
@@ -1486,6 +1549,9 @@
                   <div class="row">
                     <div class="col-4">
                       <b class="description">Description:</b>
+                      <div class="row">
+                        <div id="FlutterSpacing" class="col"></div>
+                      </div>
                       <div class="container">
                         <div class="space25px"></div>
                         <button
